# simiar_openstack

./: .gitignore  MANIFEST.in  README.rst  build-dep.sh  build-rpm.sh  setup.cfg
etc/logrotate.d/: similar  similar-openstack
package/: similar-openstack.spec  similar.spec
package/systemd/: similar-api.service  similar-openstack-api.service
similar/: __init__.py  config.py  debugger.py  i18n.py  service.py  version.py
similar/api/: main.py
similar/cmd/: __init__.py  api.py
similar/common/: config.py
similar/conf/: __init__.py  remote_debug.py  similar.py
