[metadata]
name = similar-openstack
summary = Similar Openstack
description-file =
    README.rst
author = simiar
author-email = simiar@163.com
home-page = https://www.baidu.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/nova =
        etc/similar-openstack/api-paste.ini
packages =
    similar-openstack

[entry_points]
console_scripts =
    similar-openstack-api = similar-openstack.api.main:main
    similar-openstack-db-manage = similar-openstack.db.migration.cli:main

[pbr]
warnerrors = true