[metadata]
name = similar
summary = Similar Openstack
description-file =
    README.rst
author = simiar
author-email = simiar@163.com
home-page = https://www.baidu.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    etc/similar =
        etc/similar/api-paste.ini
packages =
    similar

[entry_points]
console_scripts =
    similar-api = similar.api.main:main
    similar-db-manage = similar.db.migration.cli:main

[pbr]
warnerrors = true